# Makefile

./: Makefile.md
demo/: Makefile  m.txt  world.out  x.txt
myProject/: CMakeLists.txt
myProject/src/: main.c
